chore: better visualization

--- a/WSB.DataProcessing/Views/Home/Index.cshtml
+++ b/WSB.DataProcessing/Views/Home/Index.cshtml
@@ -9,7 +9,9 @@
 </div>
 
 
-@foreach (var item in Model)
-{
-    <span>@item.Id</span>
-}
+<ul>
+    @foreach (var item in Model)
+    {
+        <li>@item.Id</li>
+    }
+</ul>
