--- a/WSB.DataProcessing/Views/_ViewImports.cshtml
+++ b/WSB.DataProcessing/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WSB.DataProcessing
-@using WSB.DataProcessing.Models
+﻿@using DataProcessing.Front
+@using DataProcessing.Front.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
